--- a/style.css
+++ b/style.css
@@ -122,9 +122,9 @@ div#wrapper {
 /* Header */
 .cl-effect-12 {
     margin: 0 auto;
-    padding: 4em 1em;
     text-align: center;
-    padding-top: 200px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: -10px 0 0 rgba(0, 0, 0, 0.5), 10px 0 0 rgba(0, 0, 0, 0.5);
 }
 
 .cl-effect-12 h1 {
